--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <div class="container">
         <h1>Rock Paper Scissors</h1>
         <div class="scoreboard">
@@ -25,6 +26,10 @@
             <button id="reset-score">Reset Score</button>
         </div>
     </div>
+    <footer>
+        <p>Free Use Goldsmith 2024</p>
+      </footer>
+      
     <script src="script.js"></script>
 </body>
 </html>
